[gd_scene load_steps=6 format=3 uid="uid://pgmbioirtwj0"]

[ext_resource type="Script" path="res://scenes/MainMenu.gd" id="1_2m06x"]
[ext_resource type="FontFile" uid="uid://ggggasvo4rei" path="res://resources/fonts/Xolonium-Regular.ttf" id="1_xgf8s"]
[ext_resource type="Shortcut" uid="uid://dlypf33gwc5rl" path="res://shortcuts/start_game_shortcut.tres" id="2_gv1ge"]
[ext_resource type="PackedScene" uid="uid://b8rp2hocdnlwt" path="res://scenes/MessageLabel.tscn" id="3_81dru"]
[ext_resource type="Texture2D" uid="uid://dfdt4u63rnrf3" path="res://resources/gear.svg" id="5_8cb7k"]

[node name="HUD Main Menu" type="CanvasLayer"]
script = ExtResource("1_2m06x")

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 482.0
offset_bottom = 810.0

[node name="Menu" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="InfoLabel" parent="CenterContainer/Menu" instance=ExtResource("3_81dru")]
custom_minimum_size = Vector2(300, 150)
layout_mode = 2
temp_message_secs = 5

[node name="IPLabel" type="Label" parent="CenterContainer/Menu"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_xgf8s")
theme_override_font_sizes/font_size = 40
text = "Here is IP address"

[node name="Message" type="Label" parent="CenterContainer/Menu"]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_xgf8s")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Menu"]
layout_mode = 2
theme_override_constants/margin_left = 100

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Menu/MarginContainer"]
layout_mode = 2

[node name="HostBar" type="HBoxContainer" parent="CenterContainer/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Host" type="Button" parent="CenterContainer/Menu/MarginContainer/VBoxContainer/HostBar"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xgf8s")
theme_override_font_sizes/font_size = 64
shortcut = ExtResource("2_gv1ge")
text = "Start"

[node name="HostSettings" type="Button" parent="CenterContainer/Menu/MarginContainer/VBoxContainer/HostBar"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
icon = ExtResource("5_8cb7k")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ConnectBar" type="HBoxContainer" parent="CenterContainer/Menu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Connect" type="Button" parent="CenterContainer/Menu/MarginContainer/VBoxContainer/ConnectBar"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xgf8s")
theme_override_font_sizes/font_size = 50
text = "Connect
"

[node name="ConnectSettings" type="Button" parent="CenterContainer/Menu/MarginContainer/VBoxContainer/ConnectBar"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
icon = ExtResource("5_8cb7k")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="CenterContainer/Menu/MarginContainer/VBoxContainer/HostBar/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CenterContainer/Menu/MarginContainer/VBoxContainer/ConnectBar/Connect" to="." method="_on_connect_pressed"]
